unpackaged/main/default/objects/Market_Targeting_Template__c/Market_Targeting_Template__c.object-meta.xml
<CustomObject>
    <description>Junction object to connect Targeting Templates to certain Market</description>
    <label>Market Targeting Template</label>
    <nameField>
        <label>Market Targeting Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Market Targeting Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>