unpackaged/main/default/objects/Market_Targeting_Template__c/fields/Ad_Server__c.field-meta.xml
<CustomField>
    <fullName>Ad_Server__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Ad Server</label>
    <referenceTo>csdf__Ad_Server__c</referenceTo>
    <relationshipLabel>Market Targeting Templates</relationshipLabel>
    <relationshipName>Market_Targeting_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>