unpackaged/main/default/objects/Market_Targeting_Template__c/fields/Market__c.field-meta.xml
<CustomField>
    <fullName>Market__c</fullName>
    <label>Market</label>
    <referenceTo>csmso__Product_Node__c</referenceTo>
    <relationshipLabel>Market Targeting Templates</relationshipLabel>
    <relationshipName>Market_Targeting_Templates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>