unpackaged/main/default/objects/Market_Targeting_Template__c/fields/Targeting_Template__c.field-meta.xml
<CustomField>
    <fullName>Targeting_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Targeting Template</label>
    <referenceTo>csdf__Targeting_Template__c</referenceTo>
    <relationshipLabel>Market Targeting Templates</relationshipLabel>
    <relationshipName>Market_Targeting_Templates</relationshipName>
    <type>Lookup</type>
</CustomField>